# advent-of-code

./: .gitignore  CMakeLists.txt  build.sh
2021/: conanfile.txt
2021/day02/: day2.cpp
2024/common/: defines.h
2024/day_01/: Makefile  day1.cpp
2024/day_02/: Makefile  day02_text.txt  day2.cpp
day01/: day1.cpp
